--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,8 +15,8 @@
       <app-button-redes title="Whatsapp" linkUrl="https://wa.me/5544991395150?text=Gostaria%20de%20agendar%20um%20hor%C3%A1rio " image="whatsapp" />
       <app-button-redes title="Instagram" linkUrl="https://www.instagram.com/thallyakaroliineunhas/" image="instagram" />
       <app-button-redes title="Serviços e Preços" linkUrl="https://wa.me/p/8885172004838631/554491395150" image="servico-unha" />
-      <app-button-redes title="Curso VIP Presencial" linkUrl="https://wa.me/p/7463816060406898/554491395150" image="unhas" />
-      <app-button-redes title="Curso Online" linkUrl="https://wa.me/p/26572538332333437/554491395150" image="teste" />
+      <app-button-redes title="Curso VIP Presencial" linkUrl="https://wa.me/p/7463816060406898/554491395150" image="esmalte" />
+      <app-button-redes title="Localização" linkUrl="https://www.google.com/maps/place/R.+Prof.+Giampero+Monacci,+337+-+Jardim+Novo+Horizonte,+Maring%C3%A1+-+PR,+87010-090/@-23.4438794,-51.9361382,17z/data=!4m16!1m9!3m8!1s0x94ecd0b2da7ccaf9:0x26a5050eca04f245!2sR.+Prof.+Giampero+Monacci,+337+-+Jardim+Novo+Horizonte,+Maring%C3%A1+-+PR,+87010-090!3b1!8m2!3d-23.4440144!4d-51.93609!10e5!16s%2Fg%2F11hb7qfvc_!3m5!1s0x94ecd0b2da7ccaf9:0x26a5050eca04f245!8m2!3d-23.4440144!4d-51.93609!16s%2Fg%2F11hb7qfvc_?entry=ttu&g_ep=EgoyMDI0MTExOS4yIKXMDSoASAFQAw%3D%3D" image="locale" />
       <app-button-redes title="Contato" linkUrl="tel:+5544991395150" image="phone-contact" />
 
     </ul>
