modificação nos links

--- a/src/app/components/perfil/perfil.component.html
+++ b/src/app/components/perfil/perfil.component.html
@@ -1,5 +1,5 @@
 <div class="flex flex-col gap-2 text-center m-auto ">
-    <img src="../assets/images/perfils.jpg" alt="Perfil" class="rounded-2xl m-auto bg-cover" width="150" height="150">
+    <img src="../assets/images/perfil.jpg" alt="Perfil" class="rounded-2xl m-auto bg-cover" width="150" height="150">
     <h2 class="text-3xl font-bold bg-gradient-to-r from-rose-400 to-texto-color bg-clip-text text-transparent md:block hidden">Thallya Karoline Nail Designer</h2>
     <h2 class="text-3xl font-bold bg-gradient-to-r from-rose-400 to-texto-color bg-clip-text text-transparent md:hidden">Thallya Karoline <br /> Nail Designer</h2>
     <p class=" text-lg text-rose-300">Encontre todos nossos links oficiais.</p>
