--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
 
       <app-button-redes title="Agendamento" linkUrl="https://wa.me/5544991395150?text=Gostaria%20de%20agendar%20um%20hor%C3%A1rio" image="whatsapp" />
       <!-- <app-button-redes title="Instagram" linkUrl="https://www.instagram.com/thallyakaroliineunhas/" image="instagram" /> -->
-      <app-button-redes title="APOSTILA EDITÁVEL MOLDE F1" linkUrl="https://wa.me/5544991395150?text=Olá,%20gostaria%20de%20saber%20mais%20sobre%20a%20apostila" image="servico-unha" />
+      <!-- <app-button-redes title="APOSTILA EDITÁVEL MOLDE F1" linkUrl="https://wa.me/5544991395150?text=Olá,%20gostaria%20de%20saber%20mais%20sobre%20a%20apostila" image="servico-unha" /> -->
       <app-button-redes title="Curso VIP Presencial" linkUrl="http://bit.ly/3HhxIQd" image="esmalte" />
       <app-button-redes title="Localização" linkUrl="https://www.google.com/maps/place/R.+Prof.+Giampero+Monacci,+337+-+Jardim+Novo+Horizonte,+Maring%C3%A1+-+PR,+87010-090/@-23.4438794,-51.9361382,17z/data=!4m16!1m9!3m8!1s0x94ecd0b2da7ccaf9:0x26a5050eca04f245!2sR.+Prof.+Giampero+Monacci,+337+-+Jardim+Novo+Horizonte,+Maring%C3%A1+-+PR,+87010-090!3b1!8m2!3d-23.4440144!4d-51.93609!10e5!16s%2Fg%2F11hb7qfvc_!3m5!1s0x94ecd0b2da7ccaf9:0x26a5050eca04f245!8m2!3d-23.4440144!4d-51.93609!16s%2Fg%2F11hb7qfvc_?entry=ttu&g_ep=EgoyMDI0MTExOS4yIKXMDSoASAFQAw%3D%3D" image="locale" />
       <!-- <app-button-redes title="Formação Online" linkUrl="https://www.estudiothallyakaroline.com.br/" image="graduacao" /> -->
