--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,9 +16,9 @@
       <!-- <app-button-redes title="Instagram" linkUrl="https://www.instagram.com/thallyakaroliineunhas/" image="instagram" /> -->
       <!-- <app-button-redes title="APOSTILA EDITÁVEL MOLDE F1" linkUrl="https://wa.me/5544991395150?text=Olá,%20gostaria%20de%20saber%20mais%20sobre%20a%20apostila" image="servico-unha" /> -->
       <app-button-redes title="Curso VIP Presencial" linkUrl="http://bit.ly/3HhxIQd" image="esmalte" />
-      <app-button-redes title="CURSO PRESENCIAL BÁSICO" linkUrl="https://estudiothallyakaroline.com.br/curso-presencial-basico" image="esmalte" />
-      <app-button-redes title="CURSO PRESENCIAL INTERMEDIARIO  2 dias" linkUrl="https://estudiothallyakaroline.com.br/curso-presencial-intermediario-2-dias" image="esmalte" />
-      <app-button-redes title="CURSO PRESENCIAL COMPLETO" linkUrl="https://estudiothallyakaroline.com.br/curso-presencial-completo" image="esmalte" />
+      <app-button-redes title="CURSO PRESENCIAL BÁSICO" linkUrl="https://preview.canva.site/84e3c559-a656-4b46-ad07-deeb8b70bbf8/estudiothallyakaroline.com.br/curso-presencial-basico" image="esmalte" />
+      <app-button-redes title="CURSO PRESENCIAL INTERMEDIARIO  2 dias" linkUrl="https://preview.canva.site/87631a27-9ed4-4890-9027-c6fcaa824d5f/estudiothallyakaroline.com.br/curso-presencial-intermediario-2-dias" image="esmalte" />
+      <app-button-redes title="CURSO PRESENCIAL COMPLETO" linkUrl="https://preview.canva.site/cdd27d2e-1dad-41a6-aca5-7152e6882b4c/estudiothallyakaroline.com.br/curso-presencial-completo" image="esmalte" />
       <app-button-redes title="Localização" linkUrl="https://www.google.com/maps/place/R.+Prof.+Giampero+Monacci,+337+-+Jardim+Novo+Horizonte,+Maring%C3%A1+-+PR,+87010-090/@-23.4438794,-51.9361382,17z/data=!4m16!1m9!3m8!1s0x94ecd0b2da7ccaf9:0x26a5050eca04f245!2sR.+Prof.+Giampero+Monacci,+337+-+Jardim+Novo+Horizonte,+Maring%C3%A1+-+PR,+87010-090!3b1!8m2!3d-23.4440144!4d-51.93609!10e5!16s%2Fg%2F11hb7qfvc_!3m5!1s0x94ecd0b2da7ccaf9:0x26a5050eca04f245!8m2!3d-23.4440144!4d-51.93609!16s%2Fg%2F11hb7qfvc_?entry=ttu&g_ep=EgoyMDI0MTExOS4yIKXMDSoASAFQAw%3D%3D" image="locale" />
       <!-- <app-button-redes title="Formação Online" linkUrl="https://www.estudiothallyakaroline.com.br/" image="graduacao" /> -->
 
