--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,7 @@
   <div class="flex flex-col">
     <ul class="flex flex-col text-center w-full gap-4">
 
+      <app-button-redes title="INSTAGRAM" linkUrl="https://www.instagram.com/thallyakarolineunhas/" image="instagram" />
       <app-button-redes title="ENTRAR EM CONTATO" linkUrl="https://wa.me/5544991395150?text=Gostaria%20de%20agendar%20um%20hor%C3%A1rio" image="whatsapp" />
       <!-- <app-button-redes title="Instagram" linkUrl="https://www.instagram.com/thallyakaroliineunhas/" image="instagram" /> -->
       <!-- <app-button-redes title="APOSTILA EDITÁVEL MOLDE F1" linkUrl="https://wa.me/5544991395150?text=Olá,%20gostaria%20de%20saber%20mais%20sobre%20a%20apostila" image="servico-unha" /> -->
